name:                shenzhen
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/pushcx/shenzhen#readme
license:             AGPLv3
license-file:        LICENSE
author:              Peter Bhat Harkins
maintainer:          peter@push.cx
copyright:           2017 Peter Bhat Harkins
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable shenzhen
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.9 && < 5
                     , random-shuffle
                     , semigroups
                     , split
