name:                shenzhen
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/pushcx/shenzhen#readme
license:             AGPLv3
license-file:        LICENSE
author:              Peter Bhat Harkins
maintainer:          peter@push.cx
copyright:           2017 Peter Bhat Harkins
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable shenzhen
  build-depends:       base >= 4.9 && < 5
                     , random-shuffle
                     , safe
                     , semigroups
                     , split
  default-language:    Haskell2010
  hs-source-dirs:      src
  ghc-options:         -Wall
  main-is:             Main.hs
